[project]
name = "RapidQ"
version = "0.1.0"
description = "A simplified task processing library for python"
authors = [
    {name = "Yaswanth C",email = "yaswanthc.dev@gmail.com"}
]
license = {text = "BSD 3-Clause License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
