[project]
name = "RapidQ"
version = "0.1.0"
description = "A simplified task processing library for Python"
authors = [
    {name = "Yaswanth C",email = "yaswanthc.dev@gmail.com"}
]
license = {text = "BSD 3-Clause License"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = "=2.1.2"

[tool.poetry.dependencies]
redis = "5.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rapidq = "rapidq.__main__:main"
